new hello world

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 
         <!--Serials-->
 
-
         <div class="container serialContainer">
             <div class="cardsBox">
                 <div class="control">
@@ -550,3 +549,4 @@
 </body>
 </html>
 
+<!--Hello world-->
