new codes after

--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
         <!-- Movie slider -->
 
         
-        <div class="container c">
+        <div class="container filmContainer">
             <div class="cardsBox">
                 <div class="control">
                     <h1>Фильмы</h1>
