add news of footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="" width="20" height="20"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.947 13.771l4.808 4.809a.833.833 0 01-1.18 1.175l-4.808-4.804a8.384 8.384 0 01-5.338 1.906A8.428 8.428 0 010 8.43a8.428 8.428 0 1114.947 5.342zM1.673 8.43c0 3.722 3.029 6.75 6.756 6.75 3.722 0 6.755-3.028 6.755-6.75 0-3.723-3.033-6.756-6.755-6.756A6.763 6.763 0 001.673 8.43z" fill="#fff"></path></svg>
                         </label>
 
-                        <a class="signBtn" href="#">Войти</a>
+                        <a class="signBtn" href="./pages/subscribe.html" target="_blank">Войти</a>
                     </div>
                 </div>
             </div>
@@ -967,16 +967,43 @@
                             <svg width="28" height="30" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M8 0C3.589 0 0 3.589 0 8s3.589 8 8 8c4.412 0 8-3.589 8-8s-3.588-8-8-8zm-.667 11.667c0 .551-.448 1-1 1h-2c-.551 0-1-.449-1-1v-2c0-.552.449-1 1-1h2c.552 0 1 .448 1 1v2zm0-5.334c0 .552-.448 1-1 1h-2c-.551 0-1-.448-1-1v-2c0-.551.449-1 1-1h2c.552 0 1 .449 1 1v2zm5.334 5.334c0 .551-.449 1-1 1h-2c-.552 0-1-.449-1-1v-2c0-.552.448-1 1-1h2c.551 0 1 .448 1 1v2zm0-5.334c0 .552-.449 1-1 1h-2c-.552 0-1-.448-1-1v-2c0-.551.448-1 1-1h2c.551 0 1 .449 1 1v2z"></path></svg>
                             
                             <p class="our_app">
-                                <span>Наши &nbsp;</span>
+                                <span>Наши</span>
                                 <span>приложения</span>
                             </p>
                         </a>
                     </div>
                     <div class="littel_footer">
-                        
+                        <a class="yellowEffect" href="#">
+                            <svg width="14" height="16" viewBox="0 0 14 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="InfoLine_infoIcon__2yA4b"><path d="M11.44 10.165a3.42 3.42 0 01-2.77 1.413H7.077c-.552 0-1.02-.35-1.199-.84a4.044 4.044 0 01-.644-.255 4.338 4.338 0 01-1.203-.89A5.138 5.138 0 000 14.61v.32a.8.8 0 00.8.8h12.4a.8.8 0 00.8-.8v-.32a5.135 5.135 0 00-2.56-4.445z"></path><path d="M3.18 7.945a.91.91 0 00.798-.471l.012.033.004.01c.363.956 1.07 1.758 2.003 2.109a1.273 1.273 0 011.079-.597H8.67c.159 0 .307-.045.437-.117.218-.122.414-.432.515-.596.162-.262.288-.54.4-.843a.913.913 0 00.25.29v.391c0 .884-.718 1.603-1.602 1.603H7.076a.546.546 0 000 1.093H8.67a2.698 2.698 0 002.695-2.696v-.39a.909.909 0 00.364-.729V4.757a.909.909 0 00-.378-.738A4.372 4.372 0 007 0a4.372 4.372 0 00-4.352 4.019.909.909 0 00-.378.738v2.278c0 .504.41.91.91.91zM7 1.092a3.278 3.278 0 013.258 2.95.914.914 0 00-.256.316C9.487 3.013 8.336 2.078 7 2.078c-1.365 0-2.497.967-3 2.274l-.002.006a.913.913 0 00-.256-.317A3.278 3.278 0 017 1.092z"></path></svg>
+                            @cineramasupport
+                        </a>
                     </div>
-                    <div class="littel_footer"></div>
-                    <div class="littel_footer"></div>
+                    <div class="littel_footer">
+                        <a href="" class="yellowEffect aTop">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="InfoLine_infoIcon__2yA4b"><path d="M13.656 2.342A8 8 0 102.344 13.658 8 8 0 0013.656 2.342zm-1.54 8.802l-.001.001v-.003l-.406.403c-.524.53-1.287.75-2.013.576a7.088 7.088 0 01-2.059-.923A9.51 9.51 0 016.013 9.89 9.584 9.584 0 014.8 8.417a7.466 7.466 0 01-.912-1.845 2.133 2.133 0 01.533-2.179l.475-.475a.339.339 0 01.479 0h.001l1.499 1.499a.339.339 0 010 .479v.001l-.88.88a.717.717 0 00-.075.933c.318.437.67.848 1.053 1.23.427.428.891.818 1.387 1.165.286.2.675.166.923-.08l.85-.864a.339.339 0 01.48-.001v.001l1.502 1.504a.339.339 0 010 .479z"></path></svg>
+                            1132
+                        </a>
+                        <a href="" class="yellowEffect">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="InfoLine_infoIcon__2yA4b"><path d="M13.656 2.342A8 8 0 102.344 13.658 8 8 0 0013.656 2.342zm-1.54 8.802l-.001.001v-.003l-.406.403c-.524.53-1.287.75-2.013.576a7.088 7.088 0 01-2.059-.923A9.51 9.51 0 016.013 9.89 9.584 9.584 0 014.8 8.417a7.466 7.466 0 01-.912-1.845 2.133 2.133 0 01.533-2.179l.475-.475a.339.339 0 01.479 0h.001l1.499 1.499a.339.339 0 010 .479v.001l-.88.88a.717.717 0 00-.075.933c.318.437.67.848 1.053 1.23.427.428.891.818 1.387 1.165.286.2.675.166.923-.08l.85-.864a.339.339 0 01.48-.001v.001l1.502 1.504a.339.339 0 010 .479z"></path></svg>
+                            (+998) 99 775 80 55
+                        </a>
+                    </div>
+                    <div class="littel_footer socialFooter">
+                        <div class="socialMedia">
+                            <a href="" class="yellowEffect">
+                                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="18" height="18"><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256s114.6 256 256 256c1.5 0 3 0 4.5-.1V312.7h-55v-64.1h55v-47.2c0-54.7 33.4-84.5 82.2-84.5 23.4 0 43.5 1.7 49.3 2.5v57.2h-33.6c-26.5 0-31.7 12.6-31.7 31.1v40.8h63.5l-8.3 64.1h-55.2v189.5C433.7 471.4 512 372.9 512 256z"></path></svg>
+                            </a>
+                            <a href="" class="yellowEffect">
+                                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="18" height="18"><path d="M305 256c0 27.063-21.938 49-49 49s-49-21.938-49-49 21.938-49 49-49 49 21.938 49 49zm0 0"></path><path d="M370.594 169.305a45.546 45.546 0 00-10.996-16.903 45.514 45.514 0 00-16.903-10.996c-5.18-2.011-12.96-4.406-27.293-5.058-15.504-.707-20.152-.86-59.402-.86-39.254 0-43.902.149-59.402.856-14.332.656-22.118 3.05-27.293 5.062a45.483 45.483 0 00-16.903 10.996 45.572 45.572 0 00-11 16.903c-2.011 5.18-4.406 12.965-5.058 27.297-.707 15.5-.86 20.148-.86 59.402 0 39.25.153 43.898.86 59.402.652 14.332 3.047 22.114 5.058 27.293a45.563 45.563 0 0010.996 16.903 45.514 45.514 0 0016.903 10.996c5.18 2.015 12.965 4.41 27.297 5.062 15.5.707 20.144.856 59.398.856 39.258 0 43.906-.149 59.402-.856 14.332-.652 22.118-3.047 27.297-5.062a48.68 48.68 0 0027.899-27.899c2.011-5.18 4.406-12.96 5.062-27.293.707-15.504.856-20.152.856-59.402 0-39.254-.149-43.902-.856-59.402-.652-14.332-3.047-22.118-5.062-27.297zM256 331.485c-41.691 0-75.488-33.794-75.488-75.485s33.797-75.484 75.488-75.484c41.688 0 75.484 33.793 75.484 75.484S297.688 331.484 256 331.484zm78.469-136.313c-9.742 0-17.64-7.899-17.64-17.64s7.898-17.641 17.64-17.641 17.64 7.898 17.64 17.64c-.004 9.742-7.898 17.64-17.64 17.64zm0 0"></path><path d="M256 0C114.637 0 0 114.637 0 256s114.637 256 256 256 256-114.637 256-256S397.363 0 256 0zm146.113 316.605c-.71 15.649-3.199 26.333-6.832 35.684a75.164 75.164 0 01-42.992 42.992c-9.348 3.633-20.035 6.117-35.68 6.832-15.675.715-20.683.887-60.605.887-39.926 0-44.93-.172-60.61-.887-15.644-.715-26.331-3.199-35.68-6.832a72.018 72.018 0 01-26.038-16.957 72.044 72.044 0 01-16.953-26.035c-3.633-9.348-6.121-20.035-6.832-35.68-.723-15.68-.891-20.687-.891-60.609s.168-44.93.887-60.605c.71-15.649 3.195-26.332 6.828-35.684a72.013 72.013 0 0116.96-26.035 72.003 72.003 0 0126.036-16.957c9.352-3.633 20.035-6.117 35.684-6.832C211.07 109.172 216.078 109 256 109s44.93.172 60.605.89c15.649.712 26.332 3.196 35.684 6.825a72.061 72.061 0 0126.04 16.96 72.027 72.027 0 0116.952 26.036c3.637 9.352 6.121 20.035 6.836 35.684.715 15.675.883 20.683.883 60.605s-.168 44.93-.887 60.605zm0 0"></path></svg>
+                            </a>
+                            <a href="" class="yellowEffect">
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="18" height="18"><path d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0 0 5.371 0 12s5.371 12 12 12zM5.491 11.74l11.57-4.461c.537-.194 1.006.131.832.943l.001-.001-1.97 9.281c-.146.658-.537.818-1.084.508l-3-2.211-1.447 1.394c-.16.16-.295.295-.605.295l.213-3.053 5.56-5.023c.242-.213-.054-.333-.373-.121l-6.871 4.326-2.962-.924c-.643-.204-.657-.643.136-.953z"></path></svg>
+                            </a>
+
+                        </div>
+
+                        <a class="yellowEffect" href="">&copy; Akobir Toshtemirov</a>
+                    </div>
                 </div>
             </div>
         </footer>
