--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cinerama.uz</title>
-
+    <link rel="shorcut icon" href="./icon/logoIco.ico">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -59,9 +59,7 @@
             </div>
         </div>
 
-        <div class="filmAd">
-
-        </div>
+        <div class="filmAd"> </div>
 
         <!--Serials-->
 
